Added option to overwrite worldguard and allow access to interacted locked blocks (see config.yml)